tests/compile_fail/chr_removed.olrn
# the chr type was removed — compilation must FAIL
fn main() -> void
{
    c :chr = 65
}
